objects/Inbound_Freight_Table__c.object
<CustomObject>
    <description>This is a reference table to support IIP calculations.</description>
    <fields>
        <fullName>IFT_BOL_Charge__c</fullName>
        <label>BOL Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_Country_of_Origin_Code__c</fullName>
        <label>Country of Origin Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFT_Country_of_Origin_Name__c</fullName>
        <label>Country of Origin Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFT_ISPS__c</fullName>
        <label>ISPS</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_Manifest_Documentation__c</fullName>
        <label>Manifest Documentation</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X20_BAF__c</fullName>
        <label>20&apos; BAF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X20_Inland_Freight__c</fullName>
        <label>20&apos; Inland Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X20_Inland_Fuel_SurCharge__c</fullName>
        <label>20&apos; Inland Fuel SurCharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X20_Insulation__c</fullName>
        <label>20&apos; Insulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X20_Ocean_Freight__c</fullName>
        <label>20&apos; Ocean Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X20_Refer__c</fullName>
        <label>20&apos; Refer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X40_BAF__c</fullName>
        <label>40&apos; BAF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X40_Inland_Freight__c</fullName>
        <label>40&apos; Inland Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X40_Inland_Fuel_SurCharge__c</fullName>
        <label>40&apos; Inland Fuel SurCharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X40_Insulation__c</fullName>
        <label>40&apos; Insulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X40_Ocean_Freight__c</fullName>
        <label>40&apos; Ocean Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFT_X40_Refer__c</fullName>
        <label>40&apos; Refer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Inbound Freight Table</label>
    <nameField>
        <label>Inbound Freight Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound Freight Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>